--- a/MATH2940/math-2940-study-guide.tex
+++ b/MATH2940/math-2940-study-guide.tex
@@ -6,14 +6,18 @@
 \usepackage[margin=1in]{geometry}
 % Used to remove the indents from paragraphs
 \usepackage{parskip}
+% added to make terminology section look fancier with the definitions on new lines
+\usepackage[shortlabels]{enumitem}
 % for images
 \usepackage{graphicx}
 % for adjusting images
 \usepackage[export]{adjustbox}
 % added for better equation editing and alignment
 \usepackage{amsmath, amssymb, amsthm}
-% added to make terminology section look fancier with the definitions on new lines
-\usepackage[shortlabels]{enumitem}
+% for writing systems of equations
+\usepackage{systeme}
+% If uncommented, removes curly bracket created when making a system of equations with \systeme{} command
+\sysdelim..
 % for links, import this last
 \usepackage{hyperref}
 \hypersetup{
@@ -844,6 +848,26 @@
 		
 		\item see \autoref{thm:span-subspace-thm}
 	\end{itemize}
+	
+	\subsection{The Fundamental Spaces}
+	Given an $m \times n$ matrix $A$, and a linear transformation $T$:
+	\begin{description}[style=nextline]
+		\item[null space] the solution set to $\mateqaxo$. denoted by Nul$A$. Nul$A = \{\vec{x}: \mateqaxo\}$ is the fancy math way of saying it. Nul$A$ is a vector space, because it is a subspace of $\mathbb{R}^n$.
+		
+		\item[column space] the set of all linear combinations of the columns of $A$. denoted by Col$A$ If $A =
+		\begin{bmatrix}
+			\vec{a_1} & \ldots & \vec{a_n}
+		\end{bmatrix}$
+		then Col$A = \{\vec{b} : \mateqaxb for some \vec{x}\} =$ Span$\finitevecsset{a}{n}$. It is a subspace of $\mathbb{R}^m$.
+		
+		\item[row space] the set of all linear combinations of the rows of A. denoted by Row$A$. Row$A$ = Col$A^T$.
+		
+		\item[kernel] the set of all $\vec{u}$ such that $\mateq{T}{(\vec{x})}{\vec{0}}$. Kernel($T$) = $\{\vec{x}: T(\vec{x}) = \vec{0}\} =$ Nul$A$
+	\end{description}
+	
+	\begin{itemize}
+		\item see \nameref{sec:solve-fund-spcs} to solve for these mathematically
+	\end{itemize}
 	\newpage
 	
 	\section{Important Theorems}
@@ -1281,6 +1305,141 @@
 		
 		\item Solve $\mateq{U}{\vec{x}}{\vec{y}}$ for $\vec{x}$.
 	\end{enumerate}
+	
+	\subsection{Solving for the Fundamental Spaces}
+	\label{sec:solve-fund-spcs}
+	Given a matrix $A$:
+	
+	To solve for \textbf{Nul}$A$:
+	\begin{enumerate}
+		\item Solve for $\vec{x}$ in parametric vector form in $\mateqaxo$ (using G.J. elimination).
+		
+		\item Nul$A$ is the Span of the set of vectors that the free variables are multiplied by.
+	\end{enumerate}
+	
+	\begin{example}
+		Given
+		\begin{equation*}
+			A =
+			\begin{bmatrix}
+				-3 & 6 & -1 & 1 & -7\\
+				1 & -2 & 2 & 3 & -1\\
+				2 & -4 & 5 & 8 & 4\\
+			\end{bmatrix}
+		\end{equation*}
+		what is NulA?
+		
+		First, reduce $\mateqaxo$ to REF.
+		\begin{equation*}
+			A =
+			\begin{bmatrix}
+				-3 & 6 & -1 & 1 & -7 & 0\\
+				1 & -2 & 2 & 3 & -1 & 0\\
+				2 & -4 & 5 & 8 & 4 & 0\\
+			\end{bmatrix}
+			\xrightarrow{G.J.}
+			\begin{bmatrix}
+				1 & -2 & 0 & -1 & 3 & 0\\
+				0 & 0 & 1 & 2 & -2 & 0\\
+				0 & 0 & 0 & 0 & 0 & 0\\
+			\end{bmatrix}
+		\end{equation*}
+		Then, find the parametric vector form of the solution set.
+		\begin{equation*}
+			\begin{bmatrix}
+				1 & -2 & 0 & -1 & 3 & 0\\
+				0 & 0 & 1 & 2 & -2 & 0\\
+				0 & 0 & 0 & 0 & 0 & 0\\
+			\end{bmatrix}
+			\Rightarrow
+			\vec{x} =
+			\begin{bmatrix}
+				\systeme[x_2x_4x_5]{2x_2 + x_4 - 3x_5, x_2, -2x_4 + 2x_5, x_4, x_5}
+			\end{bmatrix}
+			=
+			x_2
+			\begin{bmatrix}
+				2\\
+				1\\
+				0\\
+				0\\
+				0
+			\end{bmatrix}
+			+ x_4
+			\begin{bmatrix}
+				1\\
+				0\\
+				-2\\
+				1\\
+				0
+			\end{bmatrix}
+			+ x_5
+			\begin{bmatrix}
+				-3\\
+				0\\
+				2\\
+				0\\
+				1
+			\end{bmatrix}
+		\end{equation*}
+		Now, we can conclude that Nul$A$ = Span$
+		\begin{bmatrix}
+			2\\
+			1\\
+			0\\
+			0\\
+			0
+		\end{bmatrix},
+		\begin{bmatrix}
+			1\\
+			0\\
+			-2\\
+			1\\
+			0
+		\end{bmatrix},
+		\begin{bmatrix}
+			-3\\
+			0\\
+			2\\
+			0\\
+			1
+		\end{bmatrix}$.
+	\end{example}
+	
+	To solve for \textbf{Col}$A$:
+	\begin{enumerate}
+		\item If $A =
+		\begin{bmatrix}
+			\vec{a_1} & \ldots & \vec{a_n}
+		\end{bmatrix}$,
+		then Col$A$ is Span$\finitevecsset{a}{n}$.
+	\end{enumerate}
+	
+	To solve for \textbf{Row}$A$:
+	\begin{enumerate}
+		\item If $A =
+		\begin{bmatrix}
+			\vec{r_1}\\
+			\vdots\\
+			\vec{r_n}
+		\end{bmatrix}$,
+		Row$A$ is Span$\finitevecsset{r}{n}$.
+	\end{enumerate}
+	
+	\subsection{Solving for the Bases of the Fundamental Spaces}
+	To solve for a basis of Col$A$:
+	\begin{enumerate}
+		\item Use G.J. elimination to find the echelon form of $A$.
+		
+		\item Identify the pivot columns of $A$
+		
+		\item Col$A$ is the set of vectors that in the pivot columns of the echelon form of $A$ in the the original matrix $A$.
+	\end{enumerate}
+	
+	To solve for a basis of \textbf{Row$A$}:
+	\begin{enumerate}
+		\item Row$A$ is all the nonzero vectors in the original matrix $A$ or in the echelon form of $A$.
+	\end{enumerate}
 	\newpage
 	
 	% Terminology
@@ -1472,5 +1631,13 @@
 		\item[vector space] a vector space is a nonempty set of objects (called vectors).
 		
 		\item[subspace] subspace, $H$, is a vector space that contains the zero vector of the vector space it is a subspace of, and is closed under addition ($\vec{u}, \vec{v} \in H$ implies $\vec{u} + \vec{v} \in H$) and scalar multiplication ($\vec{u}\in H$ and scalar $c$ implies $c\vec{u} \in H$).
+		
+		\item[null space (Nul$A$)] a vector space that is a subspace of $\mathbb{R} ^n$ that is the solution set to $\mateqaxo$ for an $m \times n$ matrix $A$.
+		
+		\item[column space (Col$A$)] a vector space that is a subspace of $\mathbb{R} ^m$ that is the set of all linear combinations of the columns of an $m \times n$ matrix $A$.
+		
+		\item[row space] a vector space that is the set of all linear combinations of the rows of A. denoted by Row$A$. Row$A$ = Col$A^T$.
+		
+		\item[kernel] the set of all $\vec{u}$ such that $\mateq{T}{(\vec{x})}{\vec{0}}$.
 	\end{description}
 \end{document}
